--- a/qrcode/qr-code-component-main/styles.css
+++ b/qrcode/qr-code-component-main/styles.css
@@ -19,6 +19,7 @@ img {
 #qrholder {
   background-color: white;
   width: 40%;
+  max-width: 300px;
   border-radius: 5%;
   display: flex;
   flex-direction: column;
